--- a/doctype.html
+++ b/doctype.html
@@ -155,11 +155,43 @@
     <div class="question" id="q1">
       <h2>1. Choisissez un produit</h2>
       <div class="options">
-        <!-- Tes 3 cartes Biographie - Amour - Souvenirs partagés -->
+        <!-- Les cartes sont ici -->
+        <div class="option" data-value="bio">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Biographie">
+          <div class="option-title">Biographie</div>
+          <div class="option-desc">
+            <br>Créez votre biographie à votre façon :<br><br>
+            • Racontez votre propre histoire<br>
+            • Écrivez pour un proche<br>
+            • Partagez l'écriture avec un proche
+          </div>
+        </div>
+
+        <div class="option" data-value="love">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px).png" alt="Histoire d'amour">
+          <div class="option-title">Histoire d'amour</div>
+          <div class="option-desc">
+            <br>Créez un livre autour de votre amour :<br><br>
+            • Chaque partenaire raconte<br>
+            • Vous revivez votre rencontre<br>
+            • Vous retracez votre vie commune
+          </div>
+        </div>
+
+        <div class="option" data-value="hommage">
+          <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px)%20(1).png" alt="Souvenirs partagés">
+          <div class="option-title">Souvenirs partagés</div>
+          <div class="option-desc">
+            <br>Offrez un livre en cadeau :<br><br>
+            • Témoignez de votre histoire commune<br>
+            • Célébrez sa vie<br>
+            • Offrez un souvenir éternel
+          </div>
+        </div>
       </div>
     </div>
 
-    <!-- Questions Biographie classiques -->
+    <!-- Questions pour Biographie/Hommage -->
     <div class="question" id="q2" style="display:none">
       <h2>2. Qui est concerné ?</h2>
       <div class="options">
@@ -195,7 +227,7 @@
       </div>
     </div>
 
-    <!-- Nouveau : Questions Histoire d'amour -->
+    <!-- Questions pour Histoire d'amour -->
     <div class="question" id="qLove2" style="display:none">
       <h2>2. Comment votre histoire doit-elle être racontée ?</h2>
       <div class="options">
@@ -217,51 +249,42 @@
 
 <script>
 const selections = {};
-const q1 = document.querySelectorAll('#q1 .option');
-const q2 = document.querySelectorAll('#q2 .option-small');
-const q3 = document.querySelectorAll('#q3 .option-small');
-const q4 = document.querySelectorAll('#q4 .option-small');
-const q5 = document.querySelectorAll('#q5 .option-small');
-const qLove2 = document.querySelectorAll('#qLove2 .option-small');
-const qLove3 = document.querySelectorAll('#qLove3 .option-small');
 const btnStart = document.getElementById('btnStart');
 
-function handleSelection(group, nextId, key) {
-  group.forEach(opt => {
+document.querySelectorAll('#q1 .option').forEach(opt => {
+  opt.addEventListener('click', () => {
+    document.querySelectorAll('#q1 .option').forEach(o => o.classList.remove('selected'));
+    opt.classList.add('selected');
+    selections['produit'] = opt.dataset.value;
+
+    if (opt.dataset.value === 'bio' || opt.dataset.value === 'hommage') {
+      document.getElementById('q2').style.display = 'block';
+    } else if (opt.dataset.value === 'love') {
+      document.getElementById('qLove2').style.display = 'block';
+    }
+  });
+});
+
+function handleSelection(groupSelector, nextId, key) {
+  document.querySelectorAll(groupSelector).forEach(opt => {
     opt.addEventListener('click', () => {
-      group.forEach(o => o.classList.remove('selected'));
+      document.querySelectorAll(groupSelector).forEach(o => o.classList.remove('selected'));
       opt.classList.add('selected');
       selections[key] = opt.dataset.value;
       if (nextId) {
-        const next = document.getElementById(nextId);
-        next.style.display = 'block';
-        next.style.animation = 'fadeUp 0.4s ease forwards';
+        document.getElementById(nextId).style.display = 'block';
       }
       checkIfReady();
     });
   });
 }
 
-q1.forEach(opt => {
-  opt.addEventListener('click', () => {
-    q1.forEach(o => o.classList.remove('selected'));
-    opt.classList.add('selected');
-    selections['produit'] = opt.dataset.value;
-
-    if (selections['produit'] === 'bio' || selections['produit'] === 'hommage') {
-      document.getElementById('q2').style.display = 'block';
-    } else if (selections['produit'] === 'love') {
-      document.getElementById('qLove2').style.display = 'block';
-    }
-  });
-});
-
-handleSelection(q2, 'q3', 'qui');
-handleSelection(q3, 'q4', 'age');
-handleSelection(q4, 'q5', 'personne');
-handleSelection(q5, null, 'format');
-handleSelection(qLove2, 'qLove3', 'pointDeVueLove');
-handleSelection(qLove3, null, 'enfantsLove');
+handleSelection('#q2 .option-small', 'q3', 'qui');
+handleSelection('#q3 .option-small', 'q4', 'age');
+handleSelection('#q4 .option-small', 'q5', 'personne');
+handleSelection('#q5 .option-small', null, 'format');
+handleSelection('#qLove2 .option-small', 'qLove3', 'pointDeVueLove');
+handleSelection('#qLove3 .option-small', null, 'enfantsLove');
 
 function checkIfReady() {
   const { produit, qui, age, personne, format, pointDeVueLove, enfantsLove } = selections;
@@ -278,8 +301,6 @@ btnStart.addEventListener('click', () => {
     window.location.href = `/chat.html?type=${produit}&qui=${qui}&age=${age}&perso=${personne}&format=${format}`;
   } else if (produit === 'love') {
     window.location.href = `/love.html?type=${produit}&vue=${pointDeVueLove}&enfants=${enfantsLove}`;
-  } else {
-    alert("Produit non pris en charge !");
   }
 });
 </script>
